# news_aggregatorrr

./: .gitignore  README.md  run-app.ps1
backend/: pyproject.toml  server.py  setup_db.py
backend/app/: api.py  config.py  example.env
backend/app/agent/: curator_agent.py  digest_agent.py  email_agent.py
backend/app/database/: connection.py  repository.py
backend/app/llm/: __init__.py  base.py  exceptions.py  factory.py  groq_provider.py  models.py  ollama_provider.py  openai_provider.py  prompts.py  rule_based_provider.py
backend/app/profiles/: profile_store.py
backend/app/services/: feed_service.py  pipeline_service.py  process_curator.py  process_digest.py  process_email.py
docs/: RUNNING.md
frontend/: App.jsx  index.html  package-lock.json  package.json  vite.config.js
frontend/components/: Icon.jsx  MobileNav.jsx  Sidebar.jsx  TopNav.jsx
frontend/constants/: colors.js  data.js  styles.js
frontend/pages/: AIChatPage.jsx  ArticleDetail.jsx  HomeFeed.jsx  LoginPage.jsx  NotificationsPage.jsx  ProfilePage.jsx  SavedPage.jsx  SearchPage.jsx  SettingsPage.jsx  SignupPage.jsx
frontend/utils/: api.js  articles.js
legacy/: CLERK_SETUP.md  README.md  the-curator-ai.jsx
scripts/: build-frontend.ps1  start-backend.ps1
